tdf#71251: VARCHAR max length is 32765 for Firebird

At least for Firebird 2.5 (see http://www.firebirdsql.org/en/firebird-technical-specifications/)
Let's put the same for CHAR

Cherry-picked from ba8a41bac3765f7b3562d357aeb13f752ea14ba4
Reviewed-on: https://gerrit.libreoffice.org/30783
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Julien Nabet <serval2412@yahoo.fr>

Change-Id: I4ab232689093b0418a7c1a9751685f41f2dabbf7
Reviewed-on: https://gerrit.libreoffice.org/30786
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>